--- a/src/App.css
+++ b/src/App.css
@@ -54,8 +54,11 @@ body{
 .navi a{
   color: var(--secondary);
   margin: 0 1rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
   transition: all 200ms ease;
+}
+.gul a{
+  font-size: 1.2rem;
 }
 .navi a:hover{
   color: var(--primary);
@@ -115,7 +118,7 @@ nav{
   border-radius: 5rem;
   font-weight: 700;
   letter-spacing: 1px;
-  font-size: 1rem !important;
+  font-size: 1rem ;
   animation: blinker infinite 1s ease;
 
 }
@@ -545,6 +548,9 @@ input[type=submit]:hover{
   flex-direction: column;
 
 }
+.sliderImage{
+  height: 100vh;
+}
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button { -webkit-appearance: none;}
 
 .main-container-video{
@@ -572,4 +578,31 @@ iframe{
 }
 .card-image{
   margin: 1rem;
+}
+
+
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  display: grid;
+  border: 4px solid #0000;
+  border-radius: 50%;
+  border-right-color: royalblue;
+  animation: l15 1s infinite linear;
+}
+.loader::before,
+.loader::after {    
+  content: "";
+  grid-area: 1/1;
+  margin: 2px;
+  border: inherit;
+  border-radius: 50%;
+  animation: l15 2s infinite;
+}
+.loader::after {
+  margin: 8px;
+  animation-duration: 3s;
+}
+@keyframes l15{ 
+  100%{transform: rotate(1turn)}
 }
