--- a/src/mobile.css
+++ b/src/mobile.css
@@ -9,6 +9,10 @@
 .open-navbtn{
     display: none;
 }
+.mob-text{
+    padding-left: 1rem;
+    display: none;
+}
 @media only screen and (max-width: 700px){
     .navi{
         flex-direction: column;
@@ -37,6 +41,10 @@
     nav{
         display: none;
         flex-direction: column;
+        width: 100%;
+    }
+    .mob-text{
+        display: block;
     }
     .open-navbtn{
         display: block;
@@ -45,12 +53,15 @@
         position: relative;
         height: 10vh;
         width: 100vw;
-        justify-content: flex-start;
+        justify-content: space-between;
         transition: all 300ms linear;
+        overflow: scroll;
     }
     .dropdown-content{
         position: relative;
         min-width: 50vw;
+        display: flex;
+        background-color: #525252;
         /* background-color: inherit; */
     }
     .donation-page{
@@ -93,5 +104,7 @@
     .act-card{
         width: 70vw;
     }
-    
+    .about-container,.mission-container{
+        width: 90%;
+    }
 }
